test/message/eval_messages.out
[eval]

vm.js:26
  return new binding.ContextifyScript(code, filename);
         ^
SyntaxError: Strict mode code may not include a with statement
    at Object.exports.createScript (vm.js:*:*)
    at Object.exports.runInThisContext (vm.js:*:*)
    at Object.<anonymous> ([eval]-wrapper:*:*)
    at Module._compile (module.js:*:*)
    at evalScript (node.js:*:*)
    at startup (node.js:*:*)
    at node.js:*:*
42
42

vm.js:53
  return script.runInThisContext(timeout);
                ^
Error: hello
    at [eval]:1:7
    at Object.exports.runInThisContext (vm.js:*:*)
    at Object.<anonymous> ([eval]-wrapper:*:*)
    at Module._compile (module.js:*:*)
    at evalScript (node.js:*:*)
    at startup (node.js:*:*)
    at node.js:*:*

vm.js:53
  return script.runInThisContext(timeout);
                ^
Error: hello
    at [eval]:1:7
    at Object.exports.runInThisContext (vm.js:*:*)
    at Object.<anonymous> ([eval]-wrapper:*:*)
    at Module._compile (module.js:*:*)
    at evalScript (node.js:*:*)
    at startup (node.js:*:*)
    at node.js:*:*
100

vm.js:53
  return script.runInThisContext(timeout);
                ^
ReferenceError: y is not defined
    at [eval]:1:16
    at Object.exports.runInThisContext (vm.js:*:*)
    at Object.<anonymous> ([eval]-wrapper:*:*)
    at Module._compile (module.js:*:*)
    at evalScript (node.js:*:*)
    at startup (node.js:*:*)
    at node.js:*:*

vm.js:53
  return script.runInThisContext(timeout);
                ^
10

vm.js:53
  return script.runInThisContext(timeout);
                ^
10
done

